# Labs

./: CMakeLists.txt  Converter.pro  Lab2.ipynb  Lab4.ipynb  Point.cpp  Point.hpp  Pubg_Stats.csv  appcontext.cpp  appcontext.h  entrypoint.cpp  entrypoint.h  errors.cpp  errors.h  errors.py  errorsandexceptions.hpp  figures.cpp  getters.py  info_messages.py  interface.cpp  interface.hpp  interface.py  list.cpp  list.h  logic.cpp  logic.h  logic.py  main.cpp  main.ipynb  main.py  mainwindow.cpp  mainwindow.h  mainwindow.ui  metrics_class.py  shapes.cpp  shapes.hpp
Example files/: russian_demography (all good).csv  russian_demography (broken file).csv  russian_demography (some random stuff).csv
Figures/: figures.hpp
Figures/Circle/: Circle.cpp  Circle.hpp
Figures/Rectangle/: Rectangle.cpp  Rectangle.hpp
Figures/Triangle/: Triangle.cpp  Triangle.hpp
exceptions/: BadDeletionIndexException.hpp  BadDeletionPerimeterException.hpp  EmptyListException.hpp  FigureNonViableException.hpp  InterfaceChoiceException.hpp  NonViableNumberException.hpp  NotNumberException.hpp
